cargo-features = ["profile-overrides"]

[package]
name = "data"
version = "0.1.0"
authors = ["Mark <mverleg.noreply@gmail.com>"]
edition = "2018"

[lib]
name = "programming_languages_data"
path = "lib.rs"

# Non-workspace dependencies should be optimized
[profile.dev.overrides."*"]
opt-level = 3

[dependencies]
log = { version = "0.4.6" }
env_logger = { version = "0.5.13" }
